Please see the Git commit log at <https://gitorious.org/guix>.